--- a/templates/components/pages/content-detail.html
+++ b/templates/components/pages/content-detail.html
@@ -1,13 +1,16 @@
 {% extends 'components/pages/base.html' %}
 
 {% block navbar %}
+    {% if user.is_authenticated %}
     {% include 'components/small/navbar/user-navbar.html' %}
+    {% else %}
+        {% include 'components/small/navbar/main-navbar.html' %}
+    {% endif %}
 {% endblock %}
 
 {% block main %}
     {% include 'components/small/headers/header-detail.html' %}
     <section class="content-main">
         {% include 'components/medium/post-main.html' %}
-        {% include 'components/large/content-feed.html' %}
     </section>
 {% endblock %}
