--- a/static/css/base.css
+++ b/static/css/base.css
@@ -28,6 +28,7 @@ input[type="text"] {
     border: none;
 }
 
+
 html, body {
     height: 100vh;
 }
@@ -169,9 +170,20 @@ html, body {
     background-color: transparent;
     border-radius: 20px;
     padding: 4px;
+    display: flex;
+    gap: 4px;
 }
 
 .btn-5:hover {
     color: #ff6018;
     background-color: #f3dcdc;
+}
+
+
+.icon-switch {
+    display: none;
+}
+
+.icon-switch.active {
+    display: flex;
 }
