--- a/templates/components/pages/user-page.html
+++ b/templates/components/pages/user-page.html
@@ -9,8 +9,11 @@
 {% endblock %}
 
 {% block main %}
-    {% include 'components/small/headers/header-detail.html' %}
+    {% include 'components/small/headers/header-user-page.html' %}
     <section class="content-main">
-        {% include 'components/medium/post-main.html' %}
+        {% include 'components/medium/user-profile.html' %}
+        {% for content in content_list %}
+            {% include 'components/medium/post-sub.html' %}
+        {% endfor %}
     </section>
 {% endblock %}
