added retweets, profile page

--- a/templates/components/atomic/socials-bar/views.html
+++ b/templates/components/atomic/socials-bar/views.html
@@ -1,3 +1,4 @@
 <button class="btn-5 insideLink">
     <ion-icon name="stats-chart-outline"></ion-icon>
+    <span class="counter">{{ content.views }}</span>
 </button>
