added user profile view, user profile settings and following feed

--- a/static/css/user-mainpage.css
+++ b/static/css/user-mainpage.css
@@ -52,3 +52,8 @@
 #user-post-wrapper {
     border-bottom: 1px solid lightgrey;
 }
+
+.user-post-wrapper > .tweet {
+    justify-self: end;
+    align-self: end;
+}
