--- a/templates/components/atomic/forms/write-post-form.html
+++ b/templates/components/atomic/forms/write-post-form.html
@@ -4,5 +4,5 @@
                 <textarea class="user-textarea" placeholder="What's new" name="content"
                           contenteditable></textarea>
     </div>
-    <button class="btn-2" type="submit">Tweet</button>
+    <button class="btn-2 tweet" type="submit">Tweet</button>
 </form>
