--- a/templates/components/small/headers/header-detail.html
+++ b/templates/components/small/headers/header-detail.html
@@ -1,5 +1,5 @@
 <header class="detail-post-header">
-    <a class="btn-1" href="javascript:history.go(-1)">
+    <a class="btn-1" href="javascript:history.back()">
         <ion-icon name="arrow-back-outline"></ion-icon>
     </a>
     <span>Thread</span>
