--- a/templates/components/small/headers/header-user-page.html
+++ b/templates/components/small/headers/header-user-page.html
@@ -1,6 +1,8 @@
 <header class="detail-post-header">
-    <a class="btn-1" href="javascript:history.go(-1)">
+    <a class="btn-1" href="javascript:history.back()">
         <ion-icon name="arrow-back-outline"></ion-icon>
     </a>
     <span>{{ user.username }}</span>
 </header>
+
+<!-- function for switching display of two elements -->
