--- a/static/css/base.css
+++ b/static/css/base.css
@@ -17,6 +17,7 @@ p {
 
 ion-icon .active {
     display: flex;
+
 }
 
 .icon-switch {
@@ -68,11 +69,11 @@ html, body {
     #page-wrap #main-aside > .sub-aside {
         display: none;
     }
+
     #page-wrap {
         margin-right: auto;
     }
 }
-
 
 
 #searchbar-main {
@@ -131,31 +132,32 @@ html, body {
 
 .content-main {
     overflow-y: auto;
+    padding: 0 10px;
 }
 
 
 /* width */
 ::-webkit-scrollbar {
-  width: 15px; /* you can shrink taken width */
+    width: 15px; /* you can shrink taken width */
     position: absolute;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f3f3f3;
+    background: #f3f3f3;
     border-radius: 24px;
 
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #ff6018;
+    background: #ff6018;
     border-radius: 24px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #de1800;
+    background: #de1800;
 }
 
 
