--- a/static/css/write-post.css
+++ b/static/css/write-post.css
@@ -1,7 +1,8 @@
 .write-wrapper {
+    box-sizing: border-box;
     display: flex;
     flex-direction: column;
-    width: 400px;
+    width: 100%;
     flex: 0 1 300px;
     padding: 20px;
 }
