--- a/templates/components/pages/base.html
+++ b/templates/components/pages/base.html
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="{% static 'css/user-content.css' %}">
     <link rel="stylesheet" href="{% static 'css/user-mainpage.css' %}">
     <link rel="stylesheet" href="{% static 'css/write-post.css' %}">
+    <link rel="stylesheet" href="{% static 'css/post-detail.css' %}">
+    <link rel="stylesheet" href="{% static 'css/user-profile.css' %}">
+    <link rel="stylesheet" href="{% static 'css/headers.css' %}">
 
     {% block styles %}
     {% endblock %}
@@ -24,8 +27,11 @@
 <body>
 <section id="page-wrap">
     <header id="main-header">
-        {% block navbar %}
-        {% endblock %}
+        {% if user.is_authenticated %}
+            {% include 'components/small/navbar/user-navbar.html' %}
+        {% else %}
+            {% include 'components/small/navbar/main-navbar.html' %}
+        {% endif %}
     </header>
     <main id="main-main">
         {% block main %}
@@ -133,11 +139,36 @@
 </script>
 
 <script>
+    $(".element-switch").click(function () {
+        let childs = this.children
+        for (let i = 0; i < childs.length; i++) {
+            if (childs[i].classList.contains('active')) {
+                childs[i].className = childs[i].className.replace(' active', '').replace('active', '')
+            } else {
+                childs[i].className += ' active'
+            }
+        }
+    })
+</script>
+
+<script>
     $(".like").click(function () {
-        console.log('like')
         $.post("{% url 'posts:like_post' %}",
             {
                 post_like: this.value,
+                csrfmiddlewaretoken: document.getElementsByName('csrfmiddlewaretoken')[0].value
+            },
+        )
+    });
+</script>
+
+<!-- script sending follow post request -->
+<script>
+    $(".follow-btn").click(function () {
+        console.log('follow')
+        $.post("{% url 'user_profile:follow' %}",
+            {
+                follow: this.value,
                 csrfmiddlewaretoken: document.getElementsByName('csrfmiddlewaretoken')[0].value
             },
         )
